--- a/GNetTest/Views/MovieCollectionViewCell.xib
+++ b/GNetTest/Views/MovieCollectionViewCell.xib
@@ -10,48 +10,61 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MovieCollectionViewCell" id="gTV-IL-0wX" customClass="MovieCollectionViewCell" customModule="GNetTest" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="197" height="217"/>
+            <rect key="frame" x="0.0" y="0.0" width="197" height="258"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="197" height="217"/>
+                <rect key="frame" x="0.0" y="0.0" width="197" height="258"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ikg-RK-p7u">
-                        <rect key="frame" x="5" y="10" width="187" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9EB-lU-PNz">
-                        <rect key="frame" x="10" y="186.5" width="177" height="20.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hwz-GE-IYJ">
-                        <rect key="frame" x="10" y="40.5" width="177" height="140"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="140" id="nfw-Gt-yU5"/>
-                        </constraints>
-                    </imageView>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="0r7-YZ-0nM">
+                        <rect key="frame" x="0.0" y="0.0" width="197" height="258"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ikg-RK-p7u">
+                                <rect key="frame" x="0.0" y="0.0" width="197" height="30"/>
+                                <color key="backgroundColor" red="0.49647984229999997" green="1" blue="0.29726939219999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Hwh-Z6-4h4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noImage" translatesAutoresizingMaskIntoConstraints="NO" id="hwz-GE-IYJ">
+                                <rect key="frame" x="0.0" y="35" width="197" height="178"/>
+                                <color key="backgroundColor" red="0.68108564549999995" green="0.13671225779999999" blue="0.13418744320000001" alpha="0.74738486780000002" colorSpace="custom" customColorSpace="displayP3"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9EB-lU-PNz">
+                                <rect key="frame" x="0.0" y="218" width="197" height="40"/>
+                                <color key="backgroundColor" red="0.49647984229999997" green="1" blue="0.29726939219999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="RFh-fd-KA8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="9EB-lU-PNz" secondAttribute="bottom" constant="10" id="3PW-xU-CG3"/>
-                <constraint firstItem="9EB-lU-PNz" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="3xm-nx-eIP"/>
-                <constraint firstAttribute="trailing" secondItem="Ikg-RK-p7u" secondAttribute="trailing" constant="5" id="5RC-Bt-VhV"/>
-                <constraint firstItem="hwz-GE-IYJ" firstAttribute="top" secondItem="Ikg-RK-p7u" secondAttribute="bottom" constant="10" id="6K3-Hi-8NU"/>
-                <constraint firstItem="9EB-lU-PNz" firstAttribute="top" secondItem="hwz-GE-IYJ" secondAttribute="bottom" constant="6" id="83J-Rs-tBl"/>
-                <constraint firstItem="Ikg-RK-p7u" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="DPq-lD-44G"/>
-                <constraint firstItem="hwz-GE-IYJ" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="QLS-OK-QpU"/>
-                <constraint firstItem="Ikg-RK-p7u" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="RlN-md-evj"/>
-                <constraint firstAttribute="trailing" secondItem="9EB-lU-PNz" secondAttribute="trailing" constant="10" id="bZS-Yh-DKS"/>
-                <constraint firstAttribute="trailing" secondItem="hwz-GE-IYJ" secondAttribute="trailing" constant="10" id="t2j-wL-Q4Y"/>
+                <constraint firstAttribute="trailing" secondItem="0r7-YZ-0nM" secondAttribute="trailing" id="4am-O0-cbI"/>
+                <constraint firstItem="0r7-YZ-0nM" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="Fcu-Vj-Rgn"/>
+                <constraint firstAttribute="bottom" secondItem="0r7-YZ-0nM" secondAttribute="bottom" id="mmt-kj-dTF"/>
+                <constraint firstItem="0r7-YZ-0nM" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="uau-Yw-Dnu"/>
             </constraints>
-            <size key="customSize" width="197" height="217"/>
-            <point key="canvasLocation" x="189.13043478260872" y="142.29910714285714"/>
+            <size key="customSize" width="197" height="258"/>
+            <connections>
+                <outlet property="dateLabel" destination="9EB-lU-PNz" id="XKS-ra-Nwv"/>
+                <outlet property="movieImage" destination="hwz-GE-IYJ" id="BvF-kT-sq6"/>
+                <outlet property="titleLabel" destination="Ikg-RK-p7u" id="maD-rh-Rc7"/>
+            </connections>
+            <point key="canvasLocation" x="189.13043478260872" y="155.35714285714286"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="noImage" width="600" height="600"/>
+    </resources>
 </document>
