--- a/GNetTest/Views/CollectionViewCells/MovieCollectionViewCell.xib
+++ b/GNetTest/Views/CollectionViewCells/MovieCollectionViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RecommendatedMovieCollectionViewCell" id="gTV-IL-0wX" customClass="RecommendatedMovieCollectionViewCell" customModule="GNetTest" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MovieCollectionViewCell" id="gTV-IL-0wX" customClass="MovieCollectionViewCell" customModule="GNetTest" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="197" height="258"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
