deleting files & change of background color

--- a/GNetTest/Views/CollectionViewCells/MovieCollectionViewCell.xib
+++ b/GNetTest/Views/CollectionViewCells/MovieCollectionViewCell.xib
@@ -21,7 +21,7 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LabelLabelLabelLabelLabelLabelLabel" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ikg-RK-p7u">
                                 <rect key="frame" x="0.0" y="0.0" width="197" height="40"/>
-                                <color key="backgroundColor" red="0.49647984229999997" green="1" blue="0.29726939219999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="0.255" green="0.71399999999999997" blue="0.27000000000000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Hwh-Z6-4h4"/>
                                 </constraints>
